为新版本进行重构.(工程进度 70%)

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -11,10 +11,10 @@ depend: [Essentials,Vault]
 loadbefore: [Essentials]
 
 commands:
-  advancedwarps:
+  AdvancedWarps:
     description: Reload command.
-    usage: /advancedwarps reload
-    aliases: [aw,exaw]
+    usage: /aw [info/reload]
+    aliases: [advancedwarps,aw,exaw]
 
 permissions:
   advancedwarps.admin:
