修复亿些细节.

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -15,6 +15,9 @@ commands:
     description: Reload command.
     usage: /aw [info/reload]
     aliases: [advancedwarps,aw,exaw]
+  warps:
+    description: command form Essentials.
+    usage: /warp
 
 permissions:
   advancedwarps.admin:
